--- a/recipes/lasagna.css
+++ b/recipes/lasagna.css
@@ -11,7 +11,7 @@ body, html{
     background-image: url("images/lasagna.jpg");
   
     /* Full height */
-    height: 30%;
+    height: 100%;
   
     /* Center and scale the image nicely */
     background-position: center;
@@ -20,26 +20,20 @@ body, html{
 }
   
   /* Position text in the middle of the page/image */
-.bg-text {
+#content{
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
-    color: aquamarine;
-    font-weight: bold;
-    border: 3px solid #f1f1f1;
-    position: absolute;
-    top: 3%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    width: 80%;
-    padding: 20px;
-    text-align: center;
-}
-.content{
     background-color: rgba(0,0,0, 0.4);
     color: wheat;
     font-weight: bold;
     border: 3px solid #f1f1f1;
+    position: absolute;
+    /* bottom: 0%;
+    left: 0;*/
+    /* right:50%; */
+    /* margin: 10px,10px,10px,20px; */
+    /* width: 100%;
+    height: 100%;
+    padding: 10px; */
 }
 #h3{
     text-align: left;
