--- a/recipes/lasagna.css
+++ b/recipes/lasagna.css
@@ -7,6 +7,7 @@ body, html{
   }
   
 .bg-image {
+    display: block;
     /* The image used */
     background-image: url("images/lasagna.jpg");
   
@@ -17,30 +18,26 @@ body, html{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
   
   /* Position text in the middle of the page/image */
-#content{
+.content{
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0, 0.4);
     color: wheat;
     font-weight: bold;
     border: 3px solid #f1f1f1;
-    position: absolute;
-    /* bottom: 0%;
-    left: 0;*/
-    /* right:50%; */
-    /* margin: 10px,10px,10px,20px; */
-    /* width: 100%;
-    height: 100%;
-    padding: 10px; */
+     margin: 0px,0px;
+     height: 100%;
 }
-#h3{
+.content .headings{
     text-align: left;
     font-weight:250;
     font-weight: bold;
 }
-#list{
+.content .list{
     text-align: left;
     font-style: italic;
 }
